force-app/main/default/objects/Torc_API_Call__c/Torc_API_Call__c.object-meta.xml
<CustomObject>
    <label>Torc API Call</label>
    <nameField>
        <displayFormat>CALL-{000000000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Torc API Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>