force-app/main/default/objects/Torc_API_Call__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>TR1__Application_V2__c</referenceTo>
    <relationshipLabel>Torc API Calls</relationshipLabel>
    <relationshipName>Torc_API_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>