force-app/main/default/objects/Torc_API_Call__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Torc API Calls</relationshipLabel>
    <relationshipName>Torc_API_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>