force-app/main/default/objects/Torc_API_Call__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <label>Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>