force-app/main/default/objects/Torc_API_Call__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>TR1__Job__c</referenceTo>
    <relationshipLabel>Torc API Calls</relationshipLabel>
    <relationshipName>Torc_API_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>