force-app/main/default/objects/Torc_API_Call__c/fields/SFDC_Error__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Error__c</fullName>
    <label>SFDC Error</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>