force-app/main/default/objects/Torc_API_Call__c/fields/Skip_Count__c.field-meta.xml
<CustomField>
    <fullName>Skip_Count__c</fullName>
    <label>Skip Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>