force-app/main/default/objects/Torc_API_Call__c/fields/Temp_Candidate_Torc_Id__c.field-meta.xml
<CustomField>
    <fullName>Temp_Candidate_Torc_Id__c</fullName>
    <formula>Contact__r.Torc_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp Candidate Torc Id</label>
    <type>Text</type>
</CustomField>