force-app/main/default/objects/Torc_API_Call__c/fields/Torc_Id__c.field-meta.xml
<CustomField>
    <fullName>Torc_Id__c</fullName>
    <label>Torc Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>