force-app/main/default/objects/Torc_API_Call__c/fields/Torc_Match__c.field-meta.xml
<CustomField>
    <fullName>Torc_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Torc Match</label>
    <referenceTo>Torc_Match__c</referenceTo>
    <relationshipLabel>Torc API Calls</relationshipLabel>
    <relationshipName>Torc_API_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>