force-app/main/default/objects/Torc_API_Call__c/fields/Total_time__c.field-meta.xml
<CustomField>
    <fullName>Total_time__c</fullName>
    <formula>(LastModifiedDate - CreatedDate) * 86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>