force-app/main/default/objects/Torc_API_Call__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Match</fullName>
            </value>
            <value>
                <fullName>Torc_Match</fullName>
            </value>
            <value>
                <fullName>Resume</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>